@@ -627,6 +627,7 @@ CREATE TABLE `tinventory` (
   `id_parent` mediumint(8) unsigned default NULL,
   `show_list` TINYINT(1) unsigned DEFAULT 1,
   `last_update` date NOT NULL default '0000-00-00',
+  `status` enum ('new', 'inuse', 'unused', 'issued') default 'new',
   PRIMARY KEY  (`id`),
   KEY `tinv_idx_1` (`id_contract`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
@@ -924,6 +925,7 @@ CREATE TABLE `tobject_type` (
   `name` varchar(100) NOT NULL default '', 
   `description` text NULL default NULL,
   `icon` text null default null,
+  `min_stock` int(5) NOT NULL default 0,
   PRIMARY KEY  (`id`) 
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
